@@ -19,3 +19,4 @@
 - QwtNullPaintDevice is using a different type than QPaintEngine::User now
 - QwtAbstractScale::setPenWidth extended by isCosmetic
 - qwtGetMin/qwtGetMax removed, qwtFloor/qwtCeil added
+- LOG_MIN/LOG_MAX removed, use QwtTransform::LogMin/LogMax instead ( values differ ! )
